--- a/src/scss/containers/App.scss
+++ b/src/scss/containers/App.scss
@@ -1,18 +1,20 @@
 html {
     font-size: 16px;
+    background-color: rgba(6, 5, 48, 0.548);
+    
+    
 }
 
 header {
-    border: solid 1px lime;
-
-    .logo {
-        width: rem-calc(50);
-    }
+    // border: solid 1px lime;
+    height: 3rem;
+    // background-color: pink;
 }
 
 main {
-    border: solid 1px lime;
-    display: flex;
+    // border: solid 1px lime;
+    
+    // display: flex;
     justify-content: space-between;
 
     .box {
@@ -25,11 +27,12 @@ main {
 }
 
 footer {
-    border: solid 1px lime;
+    // border: solid 1px lime;
 }
 
 .page-container {
     max-width: 1280px;
     margin: 0 auto;
-    padding: rem-calc(20);
+    // padding: 0 rem-calc(50);
+    
 }
