Add about components

--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -4,7 +4,7 @@
     width: rem-calc(1280);
     position: fixed;
     top: 0;
-    padding: rem-calc(20) 0;
+    padding: rem-calc(20);
     // background-color: blue;
     z-index: 2;
     
