--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -20,6 +20,7 @@
         
         a {
             text-decoration: none;
+            color: rgb(226, 226, 226);
         }
         .navbar-item:hover{
             transform: scale(1.2, 1.2);
