--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,5 +2,6 @@
 @import 'reset';
 
 @import './containers/App';
+@import 'lightdarkmode';
 @import './components/navbar';
 @import './containers/home';
