--- a/src/scss/containers/home.scss
+++ b/src/scss/containers/home.scss
@@ -1,58 +1,79 @@
 .welcome-container {
-    height: 90vh;
-    position: relative;
-    border-bottom: solid 0.5rem var(--lightColor);
-    .title{
-        position: absolute;
-        bottom: rem-calc(25);
-        font-weight: 800;
-        line-height: rem-calc(140);
-        font-size: rem-calc(160);
-        color: var(--lightColor);
-        text-transform: uppercase;
-        text-align: center;
-    }
+	height: calc(100vh - #{$header-height});
+	position: relative;
+	border-bottom: solid 0.5rem var(--lightColor);
+	.title{
+		position: absolute;
+		bottom: rem-calc(25);
+		font-weight: 800;
+		line-height: rem-calc(140);
+		font-size: rem-calc(160);
+		color: var(--lightColor);
+		text-transform: uppercase;
+		text-align: center;
+
+		@media only screen and (min-width: 768px) and (max-width: 1024px) {
+			font-size: rem-calc(80);
+		}
+		
+		@media only screen and (max-width: 768px) {
+			font-size: rem-calc(48);
+			line-height: 5rem;
+		}
+	}
 }
 
 .about-container {
-    display: flex;
-    padding: 3rem 10rem;
-    justify-content: space-between;
-    font-size: 1.25rem;
-    
-    color: var(--lightColor);
-    .about-tile {
-        text-align: center;
-        width: rem-calc(130);
-        // border-radius: 0.5rem;
-        // height: rem-calc(130);
-        // box-shadow: 0 0.5rem 0.5rem;
-    }
+	display: flex;
+	flex-wrap: wrap;
+	margin: 3rem auto;
+	max-width: rem-calc(960);
+	justify-content: space-between;
+	font-size: 1.25rem;
+	color: var(--lightColor);
+	
+	.about-tile {
+		text-align: center;
+		width: rem-calc(130);
+		// border-radius: 0.5rem;
+		// height: rem-calc(130);
+		// box-shadow: 0 0.5rem 0.5rem;
+		@media only screen and (max-width: 768px) {
+			width: 50%;
 
-    .about-tile:hover {
-        // background-color: rgba(195, 195, 216, 0.4);
-        transform: scale(1.2, 1.2);
-        transition: all .5s ease-in-out;
-        cursor: pointer;
-    }
+			&:nth-child(1), &:nth-child(2) {
+				margin-bottom: 32px;
+			}
+		}
 
-    .about-icon {
-        width: 5rem;
+		&:hover {
+			// background-color: rgba(195, 195, 216, 0.4);
+			transform: scale(1.2, 1.2);
+			transition: all .5s ease-in-out;
+			cursor: pointer;
+		}
+	}
 
-    }
+	.about-icon {
+		width: 5rem;
+
+		@media only screen and (max-width: 768px) {
+			width: 4rem;
+		}
+	}
 }
 
 .about-detail-container {
-    text-align: center;
-    h2 {
-        
-        font-size: 2.5rem;
-    }
+	text-align: center;
+	h2 {
+		
+		font-size: 2.5rem;
+	}
 }
 
 .design-green {
-    color: #2ECC71;
+	color: #2ECC71;
 }
 .sushi-yellow {
-    color: #F1C40F;
+	color: #F1C40F;
 }
