--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -6,11 +6,16 @@
 	position: fixed;
 	top: 0;
 	padding: rem-calc(20);
-	background-color: white;
+	background: var(--lightBg);
 	z-index: 2;
 	
-	.logo {
-		width: rem-calc(50);
+	a {
+		text-decoration: none;
+		color: var(--lightColor);
+		font-weight: bold;
+		display: flex;
+			flex-direction: column;
+			justify-content: center;
 	}
 
 	.navbar-list {
