--- a/src/scss/containers/App.scss
+++ b/src/scss/containers/App.scss
@@ -35,10 +35,16 @@ footer {
 	margin: 0 auto;
 	// padding: 0 rem-calc(50);
 	
+	h2 {
+		margin-bottom: 1rem;
+		font-size: 2.5rem;
+	}
+
 	.content-container {
 		h1 {
 			font-size: 4rem;
 			margin-bottom: 2rem;
 		}
+		
 	}
 }
