--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -5,17 +5,24 @@
 	max-width: rem-calc(1280);
 	position: fixed;
 	top: 0;
-	padding: rem-calc(20);
+	padding: 0.5rem;
 	background: var(--lightBg);
 	z-index: 2;
+	box-shadow: 0px 15px 10px -20px rgba(17, 17, 17, 0.3); 
+
 	
+
 	a {
 		text-decoration: none;
 		color: var(--lightColor);
 		font-weight: bold;
+		font-size: 2rem;
 		display: flex;
 			flex-direction: column;
 			justify-content: center;
+		@media only screen and (max-width: 768px) {
+			font-size: 1rem;
+		}
 	}
 
 	.navbar-list {
@@ -33,19 +40,20 @@
 			transform: scale(1.2, 1.2);
 			transition: all .5s ease-in-out;
 		}
-		
-		a {
-			text-decoration: none;
-			// color: rgb(226, 226, 226);
-			color: var(--lightColor);
-		}
-
-		a:visited {
-			// color: rgb(226, 226, 226);
-		}
 	
 	}
 	.toggle-container {
+		font-weight: bold;
 		text-align: center;
+		display: flex;
+			flex-direction: column;
+			justify-content: center;
+
+		span {
+			@media only screen and (max-width: 768px) {
+				display: none;
+			}
+		}
 	}
+
 }
