--- a/src/scss/containers/App.scss
+++ b/src/scss/containers/App.scss
@@ -1,4 +1,5 @@
 html {
+	font-family: 'Roboto', sans-serif;
 	min-width: 360px;
 	font-size: 16px;
 	// background-color: rgba(6, 5, 48, 0.548);
@@ -34,17 +35,62 @@ footer {
 	max-width: 1280px;
 	margin: 0 auto;
 	// padding: 0 rem-calc(50);
-	
+
 	h2 {
 		margin-bottom: 1rem;
 		font-size: 2.5rem;
+		font-weight: bold;
+
+		@media only screen and (max-width: 768px) {
+			text-align: center;
+			font-size: 2rem;
+		}
+	}
+
+	h3 {
+		font-size: 1.75rem;
+		margin-bottom: 1rem;
+		font-weight: bold;
+		
+		@media only screen and (max-width: 768px) {
+			text-align: center;
+			font-size: 1.5rem;
+		}
+	}
+
+	h4 {
+		font-size: 1.5rem;
+		margin-bottom: 1rem;
+		font-weight: bold;
+	}
+
+	p {
+		line-height: 125%;
 	}
 
 	.content-container {
 		h1 {
+			margin: 1.5rem 0;
 			font-size: 4rem;
-			margin-bottom: 2rem;
+			font-weight: bold;
+			
+			@media only screen and (max-width: 768px) {
+				text-align: center;
+				font-size: 3rem;
+				margin-bottom: 1rem;
+			}
 		}
-		
+
 	}
+}
+
+a {
+	text-decoration: none;
+	color: var(--lightColor);
+	font-weight: bold;
+	font-size: 2rem;
+	@media only screen and (max-width: 768px) {
+		font-size: 1rem;
+	}
+	
 }
