--- a/src/scss/lightdarkmode.scss
+++ b/src/scss/lightdarkmode.scss
@@ -39,7 +39,7 @@ input[type=checkbox] {
 	}
 	
 	input:checked + label {
-	background: #FFBD07;
+	background: var(--lightBtn);
 	}
 	
 	input:checked + label:after {
@@ -50,6 +50,8 @@ input[type=checkbox] {
 	-o-transform: translateX(-100%);
 	transform: translateX(-100%);
 	}
+
+	
 	
 //	 html.transition,
 //	 html.transition *,
