--- a/src/scss/containers/App.scss
+++ b/src/scss/containers/App.scss
@@ -41,8 +41,11 @@ footer {
 		font-size: 2.5rem;
 		font-weight: bold;
 
-		@media only screen and (max-width: 768px) {
+		@media only screen and (max-width: 1024px) {
 			text-align: center;
+		}
+
+		@media only screen and (max-width: 768px) {
 			font-size: 2rem;
 		}
 	}
@@ -52,8 +55,11 @@ footer {
 		margin-bottom: 1rem;
 		font-weight: bold;
 		
-		@media only screen and (max-width: 768px) {
+		@media only screen and (max-width: 1024px) {
 			text-align: center;
+		}
+
+		@media only screen and (max-width: 768px) {
 			font-size: 1.5rem;
 		}
 	}
@@ -69,12 +75,14 @@ footer {
 	}
 
 	.content-container {
+		margin: 0 1rem;
 		h1 {
 			margin: 1.5rem 0;
+			padding: 0 1rem;
 			font-size: 4rem;
 			font-weight: bold;
 			
-			@media only screen and (max-width: 768px) {
+			@media only screen and (max-width: 1024px) {
 				text-align: center;
 				font-size: 3rem;
 				margin-bottom: 1rem;
@@ -90,7 +98,7 @@ a {
 	font-weight: bold;
 	font-size: 2rem;
 	@media only screen and (max-width: 768px) {
-		font-size: 1rem;
+		font-size: 1.25rem;
 	}
 	
 }
