Change styling of project images and even out padding

--- a/src/scss/containers/App.scss
+++ b/src/scss/containers/App.scss
@@ -20,6 +20,10 @@ html[data-theme='dark'] {
 
 header {
 	height: $header-height;
+
+	@media only screen and (max-width: 768px) {
+		height: rem-calc(52);
+	}
 }
 
 main {
@@ -28,7 +32,7 @@ main {
 
 footer {
 	text-align: center;
-	padding: 0.5rem;
+	padding: 1.5rem;
 }
 
 .page-container {
@@ -42,11 +46,12 @@ footer {
 		font-weight: bold;
 
 		@media only screen and (max-width: 1024px) {
+			font-size: 2rem;
 			text-align: center;
 		}
 
 		@media only screen and (max-width: 768px) {
-			font-size: 2rem;
+			
 		}
 	}
 
@@ -56,11 +61,12 @@ footer {
 		font-weight: bold;
 		
 		@media only screen and (max-width: 1024px) {
+			font-size: 1.5rem;
 			text-align: center;
 		}
 
 		@media only screen and (max-width: 768px) {
-			font-size: 1.5rem;
+			
 		}
 	}
 
@@ -71,21 +77,21 @@ footer {
 	}
 
 	p {
-		line-height: 125%;
+		line-height: 150%;
 	}
 
 	.content-container {
 		margin: 0 1rem;
 		h1 {
+			text-align: center;
 			margin: 1.5rem 0;
 			padding: 0 1rem;
-			font-size: 4rem;
+			font-size: 3rem;
 			font-weight: bold;
 			
 			@media only screen and (max-width: 1024px) {
-				text-align: center;
-				font-size: 3rem;
-				margin-bottom: 1rem;
+				font-size: 2.5rem;
+				margin: 1rem 0;
 			}
 		}
 
