--- a/src/scss/containers/projects.scss
+++ b/src/scss/containers/projects.scss
@@ -1,27 +1,50 @@
 .project-container {
 	max-width: 1280px;
 
-	img {
-		width: 100%;
-		margin: 3rem auto;
-		box-shadow: 0px 15px 10px -10px rgba(17, 17, 17, 0.5); 
+	.project-images {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+		margin-bottom: 1.5rem;
 
-		@media only screen and (max-width: 1024px) {
-			margin: 1rem auto;
+		@media only screen and (max-width: 1024px){
+			margin-bottom: 1rem;
 		}
 
-		@media only screen and (max-width: 768px) {
-			margin: 0.5rem auto;
+		@media only screen and (max-width: 768){
+			margin-bottom: 0.5rem;
+		}
+
+		img {
+			align-self: center;
+			width: 47.5%;
+			box-shadow: 0px 15px 10px -10px rgba(17, 17, 17, 0.5); 
+
+			@media only screen and (max-width: 1024px) {
+				width: 80%;
+				margin: 0 auto;
+				margin-bottom: 1rem;
+
+				&:last-child {
+					margin-bottom: 0;
+				}
+			}
+	
+			@media only screen and (max-width: 768px) {
+				width: 100%;
+				margin: 0 auto;
+				margin-bottom: 0.5rem;
+			}
 		}
 	}
 	
 	.project-title {
-		padding: 0 1rem;
+		padding: 0 3rem;
 	}
 
 	.project-info {
 		display: flex;
-		padding: 0 1rem;
+		padding: 0 3rem;
 
 		@media only screen and (max-width: 1024px) {
 			flex-wrap: wrap;
@@ -33,8 +56,8 @@
 			margin-right: 5%;
 
 			@media only screen and (max-width: 1024px) {
-				margin: 0 auto;
-				width: 80%;
+				margin: 0;
+				width: 100%;
 				margin-bottom: 1rem;
 				box-shadow: 0px 15px 10px -20px rgba(17, 17, 17, 0.5); 
 			}
@@ -70,6 +93,7 @@
 
 			ul {
 				margin-bottom: 2rem;
+				line-height: 125%;
 
 				@media only screen and (max-width: 1024px) {
 					font-size: rem-calc(20);
