--- a/src/scss/containers/App.scss
+++ b/src/scss/containers/App.scss
@@ -6,7 +6,7 @@ html {
 	// color: rgb(226, 226, 226);
 	background: var(--lightBg);
 	color: var(--lightColor);
-	--lightBtn: #FE016C;
+	--lightBtn: #00A1A7;
 	--lightBg: #fff;
 	--lightColor: #232323;
 }
