--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -20,6 +20,7 @@
 		display: flex;
 			flex-direction: column;
 			justify-content: center;
+		cursor: pointer;
 		@media only screen and (max-width: 768px) {
 			font-size: 1.25rem;
 		}
