--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,5 +5,6 @@
 @import './containers/App';
 @import 'lightdarkmode';
 @import './components/navbar';
+@import './components/tile';
 @import './containers/home';
 @import './containers/projects';
