--- a/src/scss/components/tile.scss
+++ b/src/scss/components/tile.scss
@@ -9,33 +9,38 @@
 		position: relative;
 
 		h4, h5, button {
-			visibility: hidden;
+			opacity: 0;
 			position: absolute;
-			left: 50%;
-			transform: translate(-50%, -50%);
+			width: 100%;
+			text-align: center;
+			
+			transition: 0.5s ease;
 		}
 
 		h4 {
 			top: 40%; 
+			transform: translateY(-100%);	
 		}
 		h5 {
-			top: 60%; 
+			bottom: 40%; 
+			transform: translateY(100%);	
 		}
 		button {
 			top: 80%; 
 		}
 		img {
 			width: 100%;
+			transition: 0.5s ease;
 		}
 
 		&:hover {
 			img {
-				transition: 0.5s ease;
-				opacity: 0.2;
+				opacity: 0.25;
 			}
 			
 			h4, h5, button {
-				visibility: visible;
+				opacity: 1;
+				transform: translateY(0)
 			}
 
 			cursor: pointer;
